Fixed the bug in ipad of code word wrapping. Small fix in graph drawer for weight of multiedges. Finished introduction to graphs lesson.

--- a/styles/lesson.css
+++ b/styles/lesson.css
@@ -57,6 +57,7 @@ pre {
     max-width: 100%;
 }
 code {
+    word-wrap: normal !important;
     background: #343a40 !important;
 }
 
